# rats-corim

./: Cargo.toml  README.adoc
src/: lib.rs  serde_workaround.rs
tests/: all.rs
