[package]
name = "rats-corim"
version = "0.1.0"
edition = "2021"

[dependencies]
ciborium = { version = "0.2.2", features = ["std"] }
ciborium-io = { version = "0.2.2", features = ["std"] }
serde = { version = "1", features = ["derive"]}
serde_with = { version = "3.11.0" }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = { version = "2.0.11" }
clap = { version = "4", default-features = false, features = ["std", "derive", "default", "wrap_help"] }
hex = { version = "0.4.3", default-features = false, features = ["std"] }

[lib]
bench = false

[[bin]]
name = "corim"
test = false
bench = false
